# cargo-bsp

./: .gitignore  Cargo.toml  LICENSE  README.md  configuration_script.sh  install.sh
.github/workflows/: actions.yaml
crates/bsp4rs/: Cargo.toml
crates/bsp4rs/src/bazel/: jar.rs  library_item.rs  mod.rs  workspace_directories_result.rs  workspace_libraries_result.rs
crates/bsp4rs/src/bsp/: bsp_connection_details.rs  build_client.rs  build_client_capabilities.rs  build_server_capabilities.rs  build_target_capabilities.rs  build_target_event.rs  build_target_identifier.rs  clean_cache_params.rs  clean_cache_result.rs  code_description.rs  compile_report.rs  compile_result_data.rs  compile_task.rs  debug_session_address.rs  debug_session_params.rs  debug_session_params_data.rs  dependency_module.rs  dependency_module_data.rs  dependency_modules_item.rs  dependency_modules_params.rs  dependency_modules_result.rs  dependency_sources_item.rs  dependency_sources_params.rs  dependency_sources_result.rs  diagnostic.rs  diagnostic_code.rs  diagnostic_related_information.rs  diagnostic_severity.rs  diagnostic_tag.rs  identifier.rs  initialize_build_params.rs  language_id.rs  (+44 more)
crates/bsp_types/: Cargo.toml
crates/bsp_types/src/: basic_bsp_structures.rs  lib.rs
crates/cargo-bsp/: Cargo.toml
crates/cargo-bsp/src/: lib.rs
crates/cargo-bsp/src/cargo_communication/: cargo_actor.rs  cargo_handle.rs  cargo_messages_handle.rs  mod.rs  request_actor.rs  request_actor_sender.rs  request_actor_state.rs  request_actor_unit_graph.rs  request_handle.rs  utils.rs
crates/cargo-bsp/src/cargo_communication/cargo_check/: build_script_to_package_info.rs  check_actor.rs  check_handle.rs  mod.rs
crates/cargo-bsp/src/cargo_communication/cargo_types/: cargo_command.rs  cargo_result.rs  command_creation_details.rs  command_utils.rs  create_command.rs  event.rs  mod.rs  params_target.rs  publish_diagnostics.rs  test.rs  unit_graph.rs
crates/cargo-bsp/src/cargo_communication/check/: cargo_message_to_package_info.rs  check_actor.rs  check_handle.rs  mod.rs
crates/cargo-bsp/src/cargo_communication/execution/: cargo_messages_handle.rs  execution_actor.rs  execution_actor_sender.rs  execution_actor_state.rs  execution_actor_unit_graph.rs  execution_handle.rs  mod.rs  utils.rs
crates/cargo-bsp/src/cargo_communication/execution/cargo_types/: cargo_result.rs  cargo_unit_graph_command.rs  create_unit_graph_command.rs  mod.rs  origin_id.rs  test.rs  unit_graph.rs
crates/cargo-bsp/src/cargo_communication/execution/execution_types/: cargo_result.rs  create_unit_graph_command.rs  mod.rs  origin_id.rs  publish_diagnostics.rs  test.rs  unit_graph.rs
crates/cargo-bsp/src/project_model/: _unit_tests_discovery.rs  build_target_mappings.rs  cargo_package.rs  mod.rs  package_dependency.rs  project_manifest.rs  sources.rs  target_details.rs  toolchain.rs  workspace.rs
crates/cargo-bsp/src/project_model/rust_extension/: dependency.rs  mod.rs  package.rs  rust_package.rs  target.rs  toolchain.rs
crates/cargo-bsp/src/server/: caps.rs  config.rs  dispatch.rs  global_state.rs  handlers.rs  main_loop.rs  mod.rs  server_run.rs
crates/cargo-bsp/src/utils/: mod.rs  request_id.rs  tests.rs  uri.rs
crates/cargo-bsp/tests/: features_extension_integration_test.rs  integration_test.rs
crates/cargo-bsp/tests/common/: client.rs  mod.rs  server_utils.rs
crates/stdx/src/: lib.rs
src/: bsp_types.rs  client.rs  lib.rs  logger.rs  main.rs  server.rs  test_utils.rs  utils.rs
src/bsp_types/: basic_bsp_structures.rs  cargo_output.rs  debug_request.rs  initialize.rs  inverse_sources_request.rs  mod.rs  output_paths_request.rs  shutdown_build_request.rs
src/bsp_types/mappings/: build_target.rs  mod.rs  test.rs  to_publish_diagnostics.rs
src/bsp_types/notifications/: cancel.rs  did_change_build_target.rs  exit_build.rs  initialize_notifications.rs  initialized_build.rs  messages.rs  messages_notifications.rs  mod.rs  publish_diagnostics.rs  tasks.rs
src/bsp_types/requests/: build_target.rs  build_target_sources.rs  clean_cache.rs  compile.rs  debug.rs  debug_request.rs  dependency_modules.rs  dependency_sources.rs  dependency_sources_request.rs  initialize.rs  initialize_request.rs  inverse_sources.rs  java_extension.rs  mod.rs  output_paths.rs  reload.rs  resources.rs  run.rs  run_request.rs  shutdown_build.rs  shutdown_build_request.rs  test.rs  test_request.rs  workspace_build_targets.rs
src/cargo_communication/: cargo_actor.rs  cargo_handle.rs  cargo_messages_handle.rs  mod.rs  request_actor.rs  request_actor_sender.rs  request_actor_state.rs  request_handle.rs  utils.rs
src/cargo_communication/cargo_types/: cargo_command.rs  cargo_result.rs  mod.rs  test.rs
src/communication/: connection.rs  error.rs  mod.rs  msg.rs  req_queue.rs  stdio.rs
src/project_model/: _unit_tests_discovery.rs  build_target_mappings.rs  cargo_package.rs  mod.rs  package.rs  package_dependencies.rs  package_dependency.rs  project_manifest.rs  target_details.rs  workspace.rs
src/server/: caps.rs  cargo_actor.rs  config.rs  dispatch.rs  global_state.rs  handlers.rs  main_loop.rs  mod.rs  request_actor.rs  server_run.rs
tests/: integration_test.rs
tests/common/: client.rs  mod.rs
(+110 files in other folders)
