[workspace]

workspace.exclude = "src/server/test_data"

[package]
name = "cargo-bsp"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.147"
serde_json = "1.0.89"
serde_repr = "0.1.9"
lsp-types = "0.94.0"
crossbeam-channel = "0.5.6"
rustc-hash = "1.1.0"
anyhow = { version = "1.0.69", default-features = false }
url = "2.3.1"
command-group = "1.0.8"
cargo_metadata = "0.15.4"
jod-thread = "0.1.2"
stdx = { git = "https://github.com/rust-lang/rust-analyzer.git", package = "stdx", rev = "6d7511938a8864ccfa0a32d4884d9b92b0a37048" }
paths = { git = "https://github.com/rust-lang/rust-analyzer.git", package = "paths", rev = "6d7511938a8864ccfa0a32d4884d9b92b0a37048" }
toolchain = { git = "https://github.com/rust-lang/rust-analyzer.git", package = "toolchain", rev = "6d7511938a8864ccfa0a32d4884d9b92b0a37048" }
itertools = "0.10.5"
mockall = "0.11.3"
rand = "0.8.5"

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml", "json"] }
ntest = "0.9.0"
tempfile = "3.5.0"
