[package]
name = "cargo-bsp"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.147"
serde_json = "1.0.89"
serde_repr = "0.1.9"
lsp-types = "0.94.0"
crossbeam-channel = "0.5.6"
rustc-hash = "1.1.0"
anyhow = { version = "1.0.69", default-features = false }
url = "2.3.1"
command-group = "2.1.0"
cargo_metadata = { version = "0.15.4", features = ["builder"] }
jod-thread = "0.1.2"
stdx = { git = "https://github.com/rust-lang/rust-analyzer.git", package = "stdx", rev = "6d7511938a8864ccfa0a32d4884d9b92b0a37048" }
paths = { git = "https://github.com/rust-lang/rust-analyzer.git", package = "paths", rev = "6d7511938a8864ccfa0a32d4884d9b92b0a37048" }
toolchain = { git = "https://github.com/rust-lang/rust-analyzer.git", package = "toolchain", rev = "6d7511938a8864ccfa0a32d4884d9b92b0a37048" }
itertools = "0.10.5"
log = "0.4"
simplelog = "0.12.1"
bsp-server = { git = "https://github.com/KatKlo/rust-analyzer.git", package = "lsp-server", rev = "1ca0d234e1a80eee2b2487374cac8fa93228b14a", features = ["bsp"] }
rand = "0.8.5"
mockall = "0.11.3"

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml", "json", "redactions"] }
tempfile = "3.5.0"
ntest = "0.9.0"
assert_cmd = "2.0.11"
test-case = "3.1.0"
