[package]
name = "cargo-bsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
anyhow = { version = "1.0.69", default-features = false }
bsp-server = { git = "https://github.com/KatKlo/rust-analyzer.git", package = "lsp-server", rev = "1ca0d234e1a80eee2b2487374cac8fa93228b14a", features = ["bsp"] }
bsp-types = { path = "../bsp_types", version = "0.1.0" }
cargo_metadata = { version = "0.15.4", features = ["builder"] }
cargo-platform = "0.1.3"
command-group = "2.1.0"
crossbeam-channel = "0.5.6"
itertools = "0.11.0"
jod-thread = "0.1.2"
log = "0.4"
lsp-types = "0.94.0"
mockall = "0.11.3"
paths = { git = "https://github.com/rust-lang/rust-analyzer.git", package = "paths", rev = "6d7511938a8864ccfa0a32d4884d9b92b0a37048" }
path-absolutize = "3.1.0"
rand = "0.8.5"
rustc-hash = "1.1.0"
rustc_version = "0.4.0"
serde = "1.0.147"
serde-enum-str = "0.3.2"
serde_json = "1.0.89"
simplelog = "0.12.1"
stdx = { git = "https://github.com/rust-lang/rust-analyzer.git", package = "stdx", rev = "6d7511938a8864ccfa0a32d4884d9b92b0a37048" }
toolchain = { git = "https://github.com/rust-lang/rust-analyzer.git", package = "toolchain", rev = "6d7511938a8864ccfa0a32d4884d9b92b0a37048" }
unzip-n = "0.1.2"
url = "2.3.1"
walkdir = "2.3.3"


[dev-dependencies]
assert_cmd = "2.0.11"
insta = { version = "1.29.0", features = ["yaml", "json", "redactions"] }
ntest = "0.9.0"
tempfile = "3.5.0"
test-case = "3.1.0"
cargo-toml-builder = "0.3"
